Agregada footer con firma al layout.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,12 @@
 
   <body>
     <%= yield %>
+    <footer class="navbar-default navbar-fixed-bottom">
+      <div class="container-fluid">
+        <div class='alert alert-info text-center' role="alert">
+          <span>Desarrolado por: Gerald J. Padilla. &#8226; gpadillaq@gmail.com</span>
+        </div>
+	  </div>
+	</footer>
   </body>
 </html>
